--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -28,4 +29,78 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* ### PLACEHOLDERS ### */
+
+.dashboard-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+}
+
+.nav-icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+}
+
+/* ### UTILITIES ### */
+
+.grid-list {
+  display: grid;
+  gap: var(--grid-list-gap, 1rem);
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: start;
+}
+
+.grid-spacer {
+  display: grid;
+  gap: var(--grid-spacer-gap, 1rem);
+}
+
+/* ### LAYOUT ### */
+
+.dashboard {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-areas:
+    "sidebar header header header"
+    "sidebar main-content main-content main-content"
+    "sidebar main-content main-content main-content"
+    "sidebar main-content main-content main-content";
+}
+
+.sidebar {
+  --grid-spacer-gap: 3.5rem;
+  padding: 1.5rem;
+  grid-area: sidebar;
+  background-color: #1993d5;
+  color: #fff;
+}
+
+.sidebar ul {
+  --grid-spacer-gap: 1rem;
+}
+
+.header {
+  grid-area: header;
+  background-color: #fefeff;
+}
+
+.main-content {
+  grid-area: main-content;
+  background-color: #e3e9f0;
 }
