--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,70 @@ nav a {
   text-decoration: none;
   color: inherit;
 }
+
+/* ### PLACEHOLDERS ### */
+
+.dashboard-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+}
+
+.nav-icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+}
+
+.search-bar__icon {
+  width: 15px;
+  height: 15px;
+  background-color: #010001;
+}
+
+.bell-icon {
+  width: 15px;
+  height: 15px;
+  background-color: #010001;
+}
+
+.profile-icon-small {
+  width: 28px;
+  height: 28px;
+  background-color: #fbcc14;
+  border-radius: 200px;
+}
+
+.profile-icon-big {
+  width: 55px;
+  height: 55px;
+  background-color: #fbcc14;
+  border-radius: 200px;
+}
+
+.star-icon {
+  width: 20px;
+  height: 20px;
+  background-color: gray;
+}
+
+.eye-icon {
+  width: 20px;
+  height: 20px;
+  background-color: gray;
+}
+
+.branch-icon {
+  width: 20px;
+  height: 20px;
+  background-color: gray;
+}
+
+.trend-icon {
+  width: 38px;
+  height: 38px;
+  background-color: gray;
+  border-radius: 200px;
+}
