--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,20 @@ body {
   position: relative;
   box-shadow: 3px 4px 3px #7a7a7a44;
 }
+
+/* # SEARCH BAR # */
+
+.header__search-bar {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+}
+
+.header__input input {
+  width: 100%;
+  height: 25px;
+  border: none;
+  border-radius: 200px;
+  background-color: #e3e9f0;
+}
