--- a/styles.css
+++ b/styles.css
@@ -192,3 +192,14 @@ body {
   border-radius: 200px;
   background-color: #e3e9f0;
 }
+
+/* # PROFILE ACTIONS # */
+
+.header__profile-actions {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(3, auto);
+  justify-content: end;
+  align-items: center;
+  padding-inline-end: 1.5rem;
+}
