--- a/styles.css
+++ b/styles.css
@@ -297,3 +297,42 @@ body {
   justify-content: end;
   align-self: end;
 }
+
+/* # ANNOUNCEMENTS CONTAINER # */
+
+.main-content__announcements-container {
+  grid-area: announcements;
+  display: grid;
+  grid-auto-rows: min-content 1fr;
+}
+
+.announcements-title {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.announcements-grid {
+  background-color: #fff;
+  padding: 1rem 2.5rem;
+  border-radius: 0.6rem;
+  box-shadow: 3px 4px 3px #7a7a7a44;
+  font-size: 0.875rem;
+  line-height: 1.3;
+  align-self: start;
+}
+
+.announcement {
+  padding-block: 1.325rem;
+}
+
+.announcements-grid > * + * {
+  border-block-start: 2px solid rgba(128, 128, 128, 0.301);
+}
+
+.announcement-title {
+  font-weight: bold;
+}
+
+.announcement-description {
+  color: #353535;
+}
