--- a/styles.css
+++ b/styles.css
@@ -336,3 +336,32 @@ body {
 .announcement-description {
   color: #353535;
 }
+
+/* # TRENDING CONTAINER # */
+
+.main-content__trending-container {
+  grid-area: trending;
+  display: grid;
+  grid-auto-rows: min-content 1fr;
+}
+
+.trending-title {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.trending-grid {
+  background-color: #fff;
+  padding: 1.5rem 1.5rem 1.8rem;
+  border-radius: 0.4rem;
+  box-shadow: 3px 4px 3px #7a7a7a44;
+  display: grid;
+  /* gap: 1rem; */
+}
+
+.trend {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 1rem;
+}
